src/ScrollBox/scrollBox.css
@import "../proto/base.css";
@import "../proto/definitions/_colors.css";

.default
{
    .scrollBox
    {
        overflow: auto;
    }
}

.scroll__horizontal
{
    .scrollBox
    {
        overflow-y: hidden;
    }

}

.scroll__vertical
{
    .scrollBox
    {
        overflow-x: hidden;
    }
}

.content
{

}

.icon__down,
.icon__left,
.icon__right,
.icon__up
{
    position:         absolute;
    z-index:          99;
    background-color: var( --PC-WHITE );
    border-radius:    2rem;
    opacity:          0.8;

    svg
    {
        fill:         var( --PC-BLUE );
    }
}

.icon__down
{
    bottom:    0;
    left:      calc( 50% - 1.6rem );
}

.icon__left
{
    top:       calc( 50% - 1.6rem );
}

.icon__right
{
    top:       calc( 50% - 1.6rem );
    right:     0;
}

.icon__up
{
    top:       0;
    left:      calc( 50% - 1.6rem );
}

.content
{

}

